# googleapis-rules-registry

./: BUILD.bazel  MODULE.bazel
.bcr/: config.yml
.bcr/googleapis-rules-registry/: metadata.template.json
.bcr/googleapis-upb/: metadata.template.json  source.template.json
.github/workflows/: release.yaml  release_prep.sh
googleapis-cc/: MODULE.bazel
googleapis-go/: MODULE.bazel
googleapis-grpc-cc/: MODULE.bazel
googleapis-grpc-java/: MODULE.bazel
googleapis-java/: MODULE.bazel
googleapis-python/: MODULE.bazel
googleapis-rules-registry/private/extensions/: constants.bzl
googleapis-upb/: MODULE.bazel
