load("@bazel_skylib//rules:build_test.bzl", "build_test")

build_test(
    name = "tests",
    targets = [
        "@googleapis//google/longrunning:longrunning_cc_proto",
        "@googleapis//google/longrunning:longrunning_cc_grpc",
        "@googleapis//google/longrunning:longrunning_go_proto",
        "@googleapis//google/longrunning:longrunning_java_proto",
        "@googleapis//google/longrunning:longrunning_java_grpc",
        "@googleapis//google/longrunning:operations_py_proto",
    ],
)
